--- a/hypotenuse.html
+++ b/hypotenuse.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/ccbe6a25e7.js" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/styleHypotenuse.css">
     <title>Hypotenuse</title>
 </head>
 
@@ -34,6 +34,8 @@
 
     <h1 id="heading-hypotenuse">Calculate Hypotenuse of a triangle</h1>
     <div class="container-hypotenuse">
+
+        <h3 id="hypotenuse-formula">Hypotenuse of a Triangle =</br> √(base² + height²)</h3>
         <label for="side-one">Enter Base value:</label>
         <input type="number" id="side-one" class="input" />
         <label for="side-two">Enter Height value:</label>
@@ -41,7 +43,8 @@
 
         <button id="calculate-hypotenuse-btn">Calculate Hypotenuse</button>
 
-        <div id="output-hypotenuse"></div>
+        <div id="output-hypotenuse">
+        </div>
         <div id="output-hypotenuse-mssg">Output will come here!!!</div>
 
         <button id="clear-btn">clear</button>
