--- a/quiz.html
+++ b/quiz.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="styleQuiz.css">
     <script src="https://kit.fontawesome.com/ccbe6a25e7.js" crossorigin="anonymous"></script>
 
     <title>Quiz</title>
@@ -33,6 +33,14 @@
     <h1 id="heading-quiz">Triangle Quiz</h1>
 
     <form class="quiz-form">
+        <div class="question-container">
+            <p>How many 90 degree angles a triangle can have ?</p>
+            <label><input type="radio" name="question1">2</label>
+            <label><input type="radio" name="question1">1</label>
+            <label><input type="radio" name="question1">0</label>
+
+        </div>
+        <div class="question-container"></div>
 
 
     </form>
