--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styleIsTriangle.css">
     <title>Is Triangle ?</title>
     <script src="https://kit.fontawesome.com/ccbe6a25e7.js" crossorigin="anonymous"></script>
 
@@ -33,13 +33,13 @@
     <div class="container-is-triangle">
         <p id="discription-is-triangle">Enter angles to check the triangle is possible or not?</p>
 
-        <label for="angle-one">Angle one</label>
+        <label for="angle-one">Angle one :</label>
         <input type="number" id="angle-one" class="input">
 
-        <label for="angle-two">Angle two</label>
+        <label for="angle-two">Angle two :</label>
         <input type="number" id="angle-two" class="input">
 
-        <label for="angle-three">Angle three</label>
+        <label for="angle-three">Angle three :</label>
         <input type="number" id="angle-three" class="input">
         <button id="is-triangle-btn">Is triangle?</button>
         <div id="output-is-triangle"></div>
